added the app netlify link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,26 @@
         <div><button class="display-btn" id="hideBook">Hide Books</button></div>
       </div>
     </div>
-
+    <footer>
+      <p class="mt-5">
+        This website was coded by Mahdia Khamoosh and is
+        <span
+          ><a
+            href="https://github.com/Mahdia-123/book-tracker-app"
+            target="_blank"
+            >open-sourced</a
+          ></span
+        >
+        and hosted on
+        <span
+          ><a
+            href="https://book-tracker-app-for-all.netlify.app/"
+            target="_blank"
+            >Netlify</a
+          ></span
+        >
+      </p>
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
